--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,11 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.idea/misc.xml
+.idea/modules.xml
+.idea/presence.iml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.DS_Store
+cfg.py
